test/tests/compiler/18_structures/valid/preprocess_with_m4/plx1_m4_others.plx
# https://www.cs.auckland.ac.nz/references/unix/digital/APS32DTE/DOCU_006.HTM

# TODO

# decr
# incr
# len
# sinclude

pub fn main(none) i32 {
    return 0
}
