test/tests/compiler/18_structures/invalid_parse/plx1_struct_forward_no_semicolon.plx
type struc s1

pub fn main(none) i32 {
    return 0
}
